src/style.css
.afb-container {
	font-family: sans-serif;
	min-height: 450px;
}

.afb-container-left {
	max-height: 50%;
    overflow: auto;
}

.afb-container-right .row {
	padding: 0rem 1.25rem;
}

.afb-toolbar-item-parent {
	padding: 0px 5px 10px 5px !important;
}

.afb-toolbar-item {
	background-color: #fff;
	border: 1px dashed #bbb;
	padding: 10px;
	text-align: center;
	cursor: pointer;
}

.afb-toolbar-item:hover {
	background-color: #16c79a;
	border: 2px solid #16c79a;
	box-shadow: 1px 2px 8px #888888;
}

.afb-toolbar-item i {
	font-size: 25px;
}

.afb-toolbar-item p {
	font-size: 16px;
	margin-bottom: 0px;
}

.afb-delete-icon {
	position: absolute;
	top: 0px;
    right: 11px;
    padding: 10px;
}

.afb-delete-icon:hover {
	background-color: #dc3545;
	box-shadow: 2px 5px 8px #888888;
	border-radius: 0px 0px 0px 8px;
}

.afb-copy-icon {
	position: absolute;
	top: 0px;
    right: 44px;
    padding: 10px;
}

.afb-copy-icon:hover {
	background-color: #dc3545;
	box-shadow: 2px 5px 8px #888888;
	border-radius: 0px 0px 8px 8px;
}

.afb-item {
	background-color: #fff;
	border: 1px dashed #bbb;
	padding: 10px;
	cursor: pointer;
	margin-bottom: 12px;
}

.afb-item-selected {
	background-color: #cce5ff;
}

.afb-item:hover {
	box-shadow: 1px 2px 10px #888888;
}

.afb-item-type {
	background-color: #6c757d;
	color: #fff;
	position: absolute;
	top: 0px;
	left: 12px;
    padding: 1px 8px;
    border-radius: 0px 0px 5px 0px;
}

.afb-item-body {
	margin-top: 15px;
}

.afb-item label {
	font-size: 16px;
}

.afb-item h2 {
	margin-bottom: 0px;
}

.afb-item p {
	font-size: 16px;
	margin-bottom: 0px;
	font-weight: 500;
}

.afb-item .form-group {
	margin-bottom: 0px;
}

.afb-is-required .afb-label:after {
	content:" *";
	color: red;
}

.afb-no-items-present {
	background-color: #fff;
	border: 1px dashed #bbb;
	padding: 1rem;
}

.afb-no-items-present {
	text-align: center;
}

.afb-no-items-present h3 {
	margin-bottom: 0px;
}

.afb-container-left .card-header {
	text-align: center;
	font-weight: bold;
	font-size: 18px;
}

.afb-selected-form {
	padding: 0.25rem !important;
}

.afb-selected-form .form-group {
	border: 1px dashed #bbb;
	padding: 8px;
}

.afb-selected-form .form-check {
	border: 1px dashed #bbb;
	padding: 8px 28px;
}

.afb-selected-form label {
	font-size: 16px;
	font-weight: bold;
}

.cursor-pointer {
	cursor: pointer;
}

.afb-container-right.afb-float {
	position: fixed;
    width: 23%;
    right: 0;
}

.afb-container-left.afb-float {
	position: fixed;
    width: 21%;
}

.dragging-element {
	opacity: 0.5;
}

.drag-position {
	border: 2px dashed#34c38f;
	margin-bottom: 12px;
	text-align: center;
	padding: 5px;
}

